# architecture-patterns-with-python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
domain_modelling/: config.py  flask_app.py  repository.py  sync.py
domain_modelling/adapters/: email.py  orm.py  repository.py
domain_modelling/domain/: commands.py  events.py  model.py
domain_modelling/entrypoints/: flask_app.py  redis_eventconsumer.py  redis_eventpublisher.py
domain_modelling/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
src/domain_modelling/: model.py  orm.py  repository.py
tests/: conftest.py  services.py  test_allocate.py  test_domain_modelling.py  test_orm.py  test_repository.py  test_sync.py
tests/e2e/: api_client.py  redis_client.py  test_api.py  test_external_events.py
tests/integration/: test_orm.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_services.py
