[tool.poetry]
name = "domain-modelling"
version = "0.1.0"
description = ""
authors = ["Shota Shimizu <shota_shimizu@caddi.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.5"
black = "^22.6.0"
isort = "^5.10.1"
SQLAlchemy = "^1.4.40"
Flask = "^2.2.2"
psycopg2-binary = "^2.9.3"
redis = "^4.3.4"
pylint = "^2.15.0"
requests = "^2.28.1"
tenacity = "^8.0.1"
mypy = "^0.971"
pytest-icdiff = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
